--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backbone-class",
   "version": "0.0.1",
   "description": "Backbone Class is the missing 'Backbone.Class' in Backbone.js which provides clean JavaScript class inheritence via the Backbone.extend pattern",
+  "license": "MIT",
   "keywords": [
     "backbone",
     "class",
@@ -15,12 +16,11 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "grunt": "~0.4.0",
-    "underscore": "~1.5.2",
     "backbone": "~1.1.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
+    "underscore": "~1.5.2",
     "coffee-script": "~1.6.3",
     "chai": "~1.7.2",
     "grunt-simple-mocha": "~0.4.0",
